--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "grid_size": 4,
     "sound_enabled": true,
-    "dark_mode": true,
+    "dark_mode": false,
     "scores": [
         {
             "name": "Player",
@@ -9,9 +9,24 @@
             "time": 18
         },
         {
+            "name": "Rohan",
+            "moves": 15,
+            "time": 136
+        },
+        {
+            "name": "Player",
+            "moves": 16,
+            "time": 21
+        },
+        {
             "name": "Player",
             "moves": 17,
             "time": 22
+        },
+        {
+            "name": "rohan",
+            "moves": 18,
+            "time": 145
         },
         {
             "name": "Player 2",
